--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,20 @@
-.container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
+html {
+  position: relative;
+  min-height: 100%;
+  font-family: 'Alegreya', serif;
+}
+body {
+  margin-bottom: 120px; /* Margin bottom by footer height */
+  background-color: #FCFFE7;
+}
+
+
+h1{
+	font-family: 'Alegreya Sans', sans-serif;
+	color: #EB455F;
+}
+.bg-img{
+	text-align: center;
 }
 .navbar {
     padding-top: 15px;
@@ -8,28 +22,33 @@
     border: 0;
     border-radius: 0;
     margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
+ /*   font-size: 12px;
+    letter-spacing: 5px;*/
+    background-color: #2B3467;
 }
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
 }
 
-.footer-padding {
-	padding-bottom: 60px;
+.home{
+	margin-top: 20px;
+}
+
+#contact{
+	font-size: 1.8rem;
+	text-align: center;
+}
+
+.fa-brands{
+	color: #BAD7E9;
 }
 
 .footer {
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: #1abc9c;
-}
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+/*  height: 60px; Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #2B3467;
 
-.footer p {
-	margin-top: 25px;
-	font-size: 12px;
-  color: #fff;
 }
