--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,16 @@
 <%-include("partials/header.ejs");-%>
 
-<h1>Home</h1>
+<div class="bg-img">
+	<h1><b>Home</b></h1>
+	<img src="/images/landspace-image.jpg" width="50%">
+</div>
 
 
-<p><%=homeContent%></p>
+<p style="text-align: center;"><%=homeContent%></p>
 
 <% posts.forEach(function(post){ %>
 	<h1><%=post.title%></h1>
-	<p><%=post.content.substring(0,100)+ " ..."%> <a href="/posts/<%=post._id%>">Read more</a></p>
+	<p><%=post.content.substring(0,500)+ " ..."%> <a href="/posts/<%=post._id%>">Read more</a></p>
 	
 <% }) %>
 
