--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,18 @@
 
 </div>
-<div class="footer-padding"></div>
-  <div class="footer">
-    <p>Made in 2022</p>
-  </div>
+   <footer class="footer">
+    <p id="contact">
+      <a href="https://www.linkedin.com/in/rishabh-agarwal-8a2855230/" style="margin-right:3%; text-decoration: none" class="fa-brands fa-linkedin"></a> 
+      <a href="www.google.com" style="margin-right:3%; text-decoration: none"  class="fa-brands fa-facebook-f"></a>
+      <a href="https://github.com/Rishabh-Agarwal9" style="text-decoration: none" class="fa-brands fa-github "></a>
+
+    </p>
+    
+
+  </footer>
+
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
