--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,10 +2,10 @@
 
 <div class="bg-img">
 	<h1><b>Home</b></h1>
-	<img src="/images/landspace-image.jpg" width="50%">
+	<img src="/images/landspace-image.jpg" >
 </div>
-
-
+<!-- width="56%" -->
+<br>
 <p style="text-align: center;"><%=homeContent%></p>
 
 <% posts.forEach(function(post){ %>
